# Pdf-Managere

./: CMakeLists.txt  CMakeLists_instruction.md  README.MD  structer.md
cmake/: Testing.cmake
docs/: Architecture of Professional PDF Engines.md
include/api/: pdf_engine_api.h
include/core/: pdf_array.h  pdf_catalog.h  pdf_content_builder.h  pdf_content_stream.h  pdf_dictionary.h  pdf_document.h  pdf_image.h  pdf_image_xobject.h  pdf_object.h  pdf_object_allocator.h  pdf_object_manager.h  pdf_object_store.h  pdf_page.h  pdf_page_resources.h  pdf_pages_tree.h  pdf_stream.h  pdf_writer_document.h  pdf_xref.h
include/image_loader/: bmp_loader.h  image_loader.h  image_loader_registry.h  jpeg_loader.h
include/platform/: platform_api.h
include/system/: memory_pool.h  vector.h
include/write/: pdf_serializer.h  pdf_write.h  pdf_xref_write.h
pdfengine/include/pdf/core/: pdf_document.h  pdf_object.h  pdf_page.h  pdf_stream.h  pdf_xref.h
pdfengine/src/pdf/api/: pdf_engine_api.c
pdfengine/src/pdf/core/: pdf_document.c  pdf_object.c  pdf_page.c  pdf_stream.c  pdf_xref.c
src/api/: pdf_engine_api.c
src/core/: pdf_array.c  pdf_catalog.c  pdf_content_builder.c  pdf_content_stream.c  pdf_dictionary.c  pdf_document.c  pdf_image.c  pdf_image_xobject.c  pdf_object.c  pdf_object_allocator.c  pdf_object_manager.c  pdf_object_store.c  pdf_page.c  pdf_page_resources.c  pdf_pages_tree.c  pdf_stream.c  pdf_writer_document.c  pdf_xref.c
src/image_loader/: bmp_loader.c  image_loader_registry.c  image_loader_registry_init.c  jpeg_loader.c
src/system/: memory_pool.c  vector.c
src/writer/: pdf_serializer.c  pdf_write.c  pdf_xref_write.c
tests/api/: test_image_to_pdf.c
tools/: img2pdf_cli.c
